Fixed background zoom so that it doesn't go blurry, and discovered star spawn issue where they all spawn in a line

--- a/Open Space/main.css
+++ b/Open Space/main.css
@@ -4,3 +4,8 @@
     top: 40vh;
     left: 50vw;
 }
+
+canvas {
+	width: 100vw;
+	height: 300vh;
+}
